--- a/style.css
+++ b/style.css
@@ -6,11 +6,21 @@
 }
 
 body{
+    max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* Navbar */
+/*! Navbar */
+
+.desktopTitles{
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 10px;
+}
 
 #navbar{
     width: 100%;
@@ -21,7 +31,6 @@ body{
     background: linear-gradient(180deg, #B74534 0%, #C95D4D 100%);
     border-radius: 0px 0px 15px 15px;
 }
-
 
 #navbar select{
     padding-left: 10px;
@@ -53,7 +62,7 @@ select {
     border-radius: 50%;
 }
 
-/* Main Border */
+/*! Main Border */
 
 #waitingList, #mainBorder{
     margin: auto;
@@ -104,13 +113,27 @@ select {
     padding: 5px 0px 10px 0px;
 }
 
-#mainBorderTop{
+.desktopAnnouncement{
+        width: 784px;
+        background: linear-gradient(white, white) padding-box,      linear-gradient(to right, #B74534, #C95D4D) border-box;
+        border-radius: 15px;
+        border: 2px solid transparent;
+        padding: 10px 0px 28px 0px;
+}
+
+.desktopAnnouncement h4{
+    font-size: 24px;
+    font-weight: 700;
+    color: #393939;
+}
+
+#mainBorderTop, #mainBorderTopDesktop{
     display: flex;
     justify-content: space-between;
     color: #222222;
 }
 
-#mainBorder p{
+#mainBorder p, #mainBorderTopDesktop p{
     margin: 5px 20px 5px 10px;
     font-weight: 500;
 }
@@ -156,7 +179,7 @@ select {
     border-top: 1px solid #E4E4E4;
 }
 
-.dark:nth-child(even){
+.dark:nth-child(odd){
     background-color: #F5F5F5;
 }
 
@@ -176,29 +199,52 @@ select {
     color:#C95D4D;
 }
 
+.gameRating{
+    font-size: 24px;
+    font-weight: 700;
+}
+
 .timer{
     padding-left: 20px;
     font-weight: 400;
     font-size: 12px;
     max-width: 75px;
     min-width: 75px;
-    color: #414141;
 }
 
 .rightPlayers{
     max-width: 122px;
     min-width: 122px;
     white-space: nowrap;
-    color: #414141;
 }
 
 .leftPlayers{
-    max-width: 122px;
-    min-width: 122px;
+    max-width: 222px;
+    min-width: 222px;
     white-space: nowrap;
+}
+
+.gameRating{
+    text-align: center;
+    max-width: 70px;
+    min-width: 70px;
+}
+
+.gameType{
+    text-align: center;
+    height: 39px;
+    max-width: 132px;
+    min-width: 132px;
+}
+
+.gameRating, .timer, .rightPlayers, .leftPlayers{
     color: #414141;
 }
     
+.gameRating img{
+    width: 42px;
+}
+
 #yourName{
     color: #B74534;
 }
@@ -207,7 +253,7 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
     cursor: pointer;
 }
 
-/* Display */
+/*! Display */
 
 .display{
     position: relative;
@@ -239,12 +285,12 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
     text-decoration: underline;
 }
 
-/* Hide Elements */
+/*! Hide Elements */
 .hide{
     display: none !important;
     transition: 1s;
 }
-/* Hide Elements */
+/*! Hide Elements */
 
 .noRotate{
     transform: rotate(0deg);
@@ -256,7 +302,7 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
     transition: 1s;
 }
 
-/* Court Menu */
+/*! Court Menu */
 
 #courtMenu{
     width: 360px;
@@ -314,11 +360,181 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
     border-radius: 4px;
     border: none;
     color: white;
+    margin-bottom: 10px;
 }
 
-/* Responsive */
+.addMeDisabled{
+    opacity: 0.5;
+    transition: 1s;
+}
 
-@media only screen and (min-width: 768px) and (max-width: 834) {
+.courtsContent{
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    line-height: 28px;
+    box-shadow: 1px 1px 15px red;
+    border-radius: 8px;
+    width: 108px;
+    height: 203px;
+    background-image: url("./img/icons/courtDesktop.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.courtsContent p{
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+}
+
+.courtsContent figcaption{
+    margin-top: 12px;
+    margin-bottom: 12px;
+    text-align: center;
+    position: relative;
+    left: 4px;
+    background: linear-gradient(180deg, #B74534 0%, #C95D4D 100%);
+    border-radius: 4px;
+    color: white;
+    width: 100px;
+    height: 28px;
+    z-index: 1;
+}
+
+/*! Responsive */
+/*! Desktop */
+@media only screen and (min-width: 1664px){
+    .timer{
+        padding-left: 70px;
+        font-weight: 400;
+        font-size: 24px;
+        max-width: 200px;
+        min-width: 200px;
+    }
+    .timer span{
+        font-size: 24px;
+    }
+
+    #navbar, #waitingList, .displayContainer, .trashCan, .courtItems, #mainBorderTop {
+        display: none;
+    }
+    .desktopRightSide{
+        padding-right: 96px;
+        margin-top: 0 !important;
+    }
+    
+    .desktopLeftSide{
+        margin-top: 0 !important;
+    }
+
+    #desktopContainer{
+        display: flex;
+        justify-content: center;
+    }
+    #waitingList, #mainBorder{
+        margin: auto;
+        width: 886px;
+    }
+
+    #mainBorder{
+        margin-left: 49px;
+        padding: 7px 0px 10px 0px; 
+    }
+
+    #mainBorderTopDesktop{
+        display: flex;
+        justify-content:flex-start;
+        align-items:last baseline;
+        margin-left: 25px;
+        gap: 10px;
+    }
+
+    .desktopGameText{
+        font-size: 20px;
+        text-align: center;
+    }
+
+    #waitingTimeText{
+        font-size: 24px;
+        position: relative;
+        left: 345px;
+    }
+
+    .court{
+        justify-content: space-evenly;
+    }
+
+    #courtMenu{
+        width: 784px;
+        margin: auto;
+        position: relative;
+    }
+    .mainPlayerList{
+        height: 106px;
+    }
+    .mainPlayerList p{
+        font-size: 18px;
+        padding: 10px;
+    }
+    .rightPlayers{
+        max-width: 222px;
+        min-width: 222px;
+    }
+    .leftPlayers{
+        margin-left: 22px;
+        max-width: 222px;
+        min-width: 222px;
+    }
+    .court img, .court .selected{
+        width: 108px;
+    }
+    #addMe{
+        width: 778px;
+        height: 80px;
+        font-size: 24px;
+        font-weight: 600;
+    }
+    .compass{
+        position: absolute;
+        right: -80px;
+        top: -50px
+    }
+    
+    .extraMargin{
+        margin: 15px 0px 15px 0px;
+    }
+
+    .compass img{
+        width: 52px;
+    }
+    #desktopContainer .announcementBackground{
+        padding: 24px;
+    }
+    .announcementBackground, #datePosted, #datePostedHours{
+        font-size: 18px;
+    }
+    #datePosted{
+        padding-left: 24px;
+    }
+    #datePostedHours{
+        padding-right: 54px;
+    }
+    #datePostedHours span{
+        font-size: 14px;
+        font-weight: 300;
+    }
+    #announcementDate{
+        margin-top: 10px;
+        margin-bottom: 5px;
+    }
+}
+/*! Tablet*/
+@media only screen and (min-width: 768px) and (max-width: 1663px) {
+    .gameType, .gameRating, .desktopTitles, .desktopAnnouncement, .courtsContent, #mainBorderTopDesktop{
+        display: none;
+    }
+
     #navbar select{
         width: 400px;
     }
@@ -348,24 +564,24 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
         max-width: 210px;
         min-width: 210px;
     }
-
-   .display{
-       
+    .display{
         font-size: 18px;
         justify-content: space-evenly;
     }
-    
     .court img, .court .selected{
         width: 90px;
     }
     .compass img{
-        width: 70px;
+        width: 52px;
         top: 15px;
         right: 0px;
     }
     }
-
+/*! Mobile*/
 @media only screen and (min-width: 360px) and (max-width: 767px){
+    .gameType, .gameRating, .desktopTitles, .desktopAnnouncement, .courtsContent, #mainBorderTopDesktop{
+        display: none;
+    }
     #navbar select{
             width: 204px;
     }
@@ -379,9 +595,24 @@ i:hover, #addMe:hover, .backgroundWhite:hover, .court img:hover{
     #mainBorderTop{
         font-size: 13px
     }
+    .timer{
+        padding-left: 20px;
+    }
+    .rightPlayers{
+        max-width: 122px;
+        min-width: 122px;
+    }
+    
+    .leftPlayers{
+        max-width: 122px;
+        min-width: 122px;
+    }
 }
-
+/*! Older Mobile*/
 @media only screen and (min-width: 320px) and (max-width: 359px){
+    .gameType, .gameRating, .desktopTitles, .desktopAnnouncement, .courtsContent, #mainBorderTopDesktop{
+        display: none;
+    }
     #addMe{
         width: 250px;
     }
